Initial DepthBuffer work.

--- a/mods/sp/rules/structures.yaml
+++ b/mods/sp/rules/structures.yaml
@@ -192,9 +192,6 @@ GAWEAP:
 	WithIdleOverlay@TURBINES:
 		Sequence: idle-turbines
 		RequiresCondition: !Building-Buildup
-	WithIdleOverlay@BIB:
-		Sequence: bib
-		RequiresCondition: !Building-Buildup
 	WithMakeOverlay@MAKE-BRIGHT:
 		Sequence: make-bright
 		Palette: bright
@@ -277,6 +274,12 @@ GATECH:
 	WithIdleOverlay@LIGHTS:
 		Sequence: idle-lights
 		RequiresCondition: !Building-Buildup
+		Palette: player-nobright
+		IsPlayerPalette: True
+	WithIdleOverlay@LIGHTS-BRIGHT:
+		RequiresCondition: !Building-Buildup
+		Sequence: idle-lights-bright
+		Palette: bright
 	RequiresBuildableArea:
 		AreaTypes: building
 	IsometricSelectable:
@@ -537,9 +540,6 @@ NAWEAP:
 		RequiresCondition: !Building-Buildup
 		Sequence: production-lights-bright
 		Palette: bright
-	WithIdleOverlay@BIB:
-		Sequence: bib
-		RequiresCondition: !Building-Buildup
 
 NARADR:
 	Inherits: ^Radar
